# JobIntelligenceApply

./: .env.example  .gitignore  README.md  docker-compose.yml
services/ai-service/: Dockerfile  pyproject.toml
services/ai-service/app/: __init__.py  main.py
services/ai-service/app/core/: __init__.py  config.py
services/ai-service/app/parsers/: resumes.py
services/ai-service/app/providers/: base.py
services/ai-service/app/schemas/: __init__.py  resumes.py
services/ai-service/app/vectorstore/: __init__.py  embeddings.py
services/ai-service/tests/: test_health.py  test_resume_parsing.py
services/backend/: Dockerfile  alembic.ini  pyproject.toml
services/backend/alembic/: README  env.py
services/backend/alembic/versions/: 20260603_0001_create_users.py  20260603_0002_create_resumes.py  20260603_0003_add_resume_parsing_fields.py  20260603_0004_create_jobs.py  20260603_0005_create_job_matches.py  20260603_0006_create_generated_answers.py
services/backend/app/: __init__.py  main.py
services/backend/app/api/: dependencies.py
services/backend/app/core/: config.py
services/backend/app/db/: session.py
services/backend/app/repositories/: generated_answers.py  jobs.py  matches.py  resumes.py  users.py
services/backend/app/schemas/: auth.py  generated_answers.py  jobs.py  matches.py  resumes.py
services/backend/app/services/: application_assistant.py  job_connectors.py  job_discovery.py  match_scoring.py  resume_parser_client.py  resume_storage.py
services/backend/tests/: conftest.py  test_auth.py  test_generated_answers.py  test_health.py  test_jobs.py  test_matches.py  test_resumes.py
services/scheduler/: Dockerfile  pyproject.toml
services/scheduler/app/: __init__.py  main.py
services/scheduler/app/connectors/: __init__.py  (+1 more)
services/scheduler/tests/: test_scheduler.py
(+38 files in other folders)
