[project]
name = "applywise-ai-service"
version = "0.1.0"
description = "ApplyWise AI service for parsing, scoring, generation, and embeddings"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "pypdf>=5.1.0",
  "python-docx>=1.1.2",
  "python-multipart>=0.0.12",
  "pydantic-settings>=2.5.2",
  "uvicorn[standard]>=0.30.6"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.2",
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.9"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
