[project]
name = "applywise-backend"
version = "0.1.0"
description = "ApplyWise AI backend API service"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.3",
  "fastapi>=0.115.0",
  "httpx>=0.27.2",
  "itsdangerous>=2.2.0",
  "pydantic-settings>=2.5.2",
  "psycopg[binary]>=3.2.3",
  "python-multipart>=0.0.12",
  "sqlalchemy>=2.0.35",
  "uvicorn[standard]>=0.30.6"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.9"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
