[project]
name = "applywise-scheduler"
version = "0.1.0"
description = "ApplyWise AI scheduler service"
requires-python = ">=3.12"
dependencies = [
  "apscheduler>=3.10.4",
  "httpx>=0.27.2",
  "pydantic-settings>=2.5.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "ruff>=0.6.9"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
